# langraph_course

./: .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-notebook.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured_output.ipynb  09-prompting.ipynb  10-tools.ipynb  11-conditions.ipynb  12-parallization.ipynb  13-random.ipynb  notebook.ipynb
src/agents/: code_review.py  evaluator.py  joker.py  main.py  orchestrator.py  rag.py  rag_raw.py  react.py  simple.py
src/agents/support/: agent.py  llm.py  state.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/routes/intent/: prompt.py  route.py
src/api/: db.py  main.py
